파일 열기, 저장 추가

--- a/NotepadReinvention.vcxproj.filters
+++ b/NotepadReinvention.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="TextManager.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="NotepadReinvention.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="NotepadReinvention.cpp">
